--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="shortcut icon" href="img/favicon.png">
+	<meta name="theme-color" content="#ffffff">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>JenniGrenz.com</title>
+	<title>Jennifer Grenz</title>
+<!-- google fonts added here -->
+<link href="https://fonts.googleapis.com/css?family=Comfortaa|Rock+Salt" rel="stylesheet">
 
 <!-- Bootstrap minified CDN addded here -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"crossorigin="anonymous">
@@ -24,67 +28,62 @@
 
 <!-- header and nav bar begin here 
  -->
-<div id="navbar">
-<header>
-<a href="#"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></a>
 
-<img src="img/jglogo.png">
-</header>
+<a href="#"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></a>
 
 <div class="menu">
   <ul>
-    <a href="#aboutme"><li>About Me</li></a>
-    <a href="#portfolio"><li>Work Products</li></a>
-    <a href="#contactme"><li>Contact</li></a>
-    <a href="#social"><li>Social</li></a>
+    <a href="#aboutme"><li><h4>About Me</h4></li></a>
+    <a href="#portfolio"><li><h4>Work Products</h4></li></a>
+    <a href="#contactme"><li><h4>Contact</h4></li></a>
   </ul>
 </div> 
-</div>
 
 <div id="aboutme">
-<h1 class="title">Jennifer Grenz</h1>
-<div class="headshot"> <img src="img/headshot.jpg"> </div>
-<p class="intro">Dynamic storyteller, mobile enthusiast, outdoor adventurer and generally upbeat person who loves to market new, exciting products!</p> 
+<div class="intro">
+<h1>Jennifer Grenz</h1>
+<img src="img/headshot.jpg">
+<p>Dynamic storyteller, mobile enthusiast, outdoor adventurer and generally upbeat person who loves to market new, exciting products!</p> 
 </div>
-
+</div>
 <!-- Header and nav bar end here  -->
 
-<br>
-<hr>
-
-<!-- Work Example Tabs -->
+<!-- Portfolio -->
 <div id="portfolio">
 <div class="container">
-  <h1>Work Portfolio</h1>
-  <p>A decade in tech has brought a wealth of knowlege and experience. Below, you'll see examples of B2B, Software, Hardware, and Marketing innitiatives. A discription of each project can be found below the icons and you can learn more by clicking on each image.</p>
+	<div class="tabintro">
+	  <h1>Work Portfolio</h1>
+	  <p>A decade in tech has brought a wealth of knowlege and experience. Below, you'll see examples of B2B, Software, Hardware, and Marketing innitiatives. A discription of each project can be found below the icons and you can learn more by clicking on each image.</p>
+	</div>
+<br>
 
   <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#home">Funding</a></li>
-    <li><a data-toggle="tab" href="#menu1">Marketing</a></li>
-    <li><a data-toggle="tab" href="#menu2">Product Launch</a></li>
+    <li class="active"><a data-toggle="tab" href="#home">Marketing</a></li>
+    <li><a data-toggle="tab" href="#menu1">Product Launch</a></li>
+    <li><a data-toggle="tab" href="#menu2">Funding</a></li>
   </ul>
 
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
 		<div class="container">
-			<h1>Funding Decks</h1>
+			<h1>Marketing</h1>
 				<div class="row">
 					<div class="col-sm-4">
-						<img src="img/document.png">
+						<img src="img/ossiaplaceholder.jpg">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat.</p>
 					</div>
 					<div class="col-sm-4">
-						<img src="img/document.png">
+						<img src="img/ossiaplaceholder.jpg">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat.</p>
 					</div>
 					<div class="col-sm-4">
-						<img src="img/document.png">
+						<img src="img/ossiaplaceholder.jpg">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -96,24 +95,24 @@
 
 	<div id="menu1" class="tab-pane fade">
 			<div class="container">
-				<h1>Marketing Decks</h1>
+				<h1>Prouduct Launch</h1>
 					<div class="row">
 						<div class="col-sm-4">
-							<img src="img/document.png">
+							<img src="img/ossiaplaceholder.jpg">
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 							consequat.</p>
 						</div>
 						<div class="col-sm-4">
-							<img src="img/document.png">
+							<img src="img/ossiaplaceholder.jpg">
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 							consequat.</p>
 						</div>
 						<div class="col-sm-4">
-							<img src="img/document.png">
+							<img src="img/ossiaplaceholder.jpg">
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -125,24 +124,24 @@
 
     <div id="menu2" class="tab-pane fade">
       	<div class="container">
-			<h1>Prouduct Launch Decks</h1>
+			<h1>Funding</h1>
 				<div class="row">
 					<div class="col-sm-4">
-						<img src="img/document.png">
+						<img src="img/ossiaplaceholder.jpg">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat.</p>
 					</div>
 					<div class="col-sm-4">
-						<img src="img/document.png">
+						<img src="img/ossiaplaceholder.jpg">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat.</p>
 					</div>
 					<div class="col-sm-4">
-						<img src="img/document.png">
+						<img src="img/ossiaplaceholder.jpg">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -155,103 +154,84 @@
   </div>
 </div>
 </div>
-<!-- work example complete  -->
 
-<br>
-<hr>
+<!-- portfolio complete  -->
 
 
-<!-- Contact me section begins here 
- -->
+<!-- Contact me section  -->
+
 <div id="contactme">
+	<div class="contacttop">
 	<h1>Contact Me</h1>
-	<p> Questions about my portfolio? Need consulting or contract work? Interested in a joint marketing initiative? I'd love to hear from you. Use the form below to drop me a line. I'll return your correspondence as quickly as I can.</p>
+	<p> Questions about my portfolio? Need consulting or contract work? Interested in a joint marketing initiative? I'd love to hear from you. Use the box below to drop me a line. I'll return your correspondence as quickly as I can.</p>
 
-<form id="contact-form" method="post" action="contact.php" role="form">
 
-    <div class="messages"></div>
+<a href="#contactModal" role="button" data-toggle="modal" class="btn btn-primary'          btn-lg"><i class="fa fa-contact "></i> <span class="network-name">Email Me!</span></a>
+  <!-- Modal -->
+        <div id="contactModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h4 class="modal-title">Email Jenni!</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="containter">
+                            <div class="row">
+                                <form class="form-horizontal" name="commentform" method="post" action="send_form_email.php">
+                                    <div class="col-xs-8">
+                                        <div class="form-group">
+                                            <label for="InputName" class="col-lg-4 control-label">Name</label>
+                                            <div class="col-lg-8">
+                                                <input type="text" class="form-control" name="first_name" id="first_name"  required>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="InputEmail" class="col-lg-4 control-label">Email</label>
+                                            <div class="col-lg-8">
+                                                <input type="email" class="form-control" id="email" name="email"  required  >
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="InputMessage" class="col-lg-4 control-label">Message</label>
+                                            <div class="col-lg-8">
+                                                <textarea name="comments" id="comments" class="form-control" rows="5" required></textarea>
+                                            </div>
+                                        </div>
+                                        
+                                        <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-info pull-right">
+                                    </div>
+                                </form>
+                                <hr class="featurette-divider hidden-lg">
+                                <div class="col-xs-4 text-left">
+                                        <h3>Jennifer Grenz</h3>
+                                        <h3>28 Hazel Ave<br>
+                                       	Mill Valley, CA 94941</h3>
+                                        <h3>719.659.8282</h3>
+                                 
+                                </div>
 
-    <div class="controls">
+                            </div>
 
-        <div class="row">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="form_name">Firstname *</label>
-                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
-                    <div class="help-block with-errors"></div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="form_lastname">Lastname *</label>
-                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
-                    <div class="help-block with-errors"></div>
-                </div>
-            </div>
+                        </div>
+                    </div><!-- End of Modal body -->
+                </div><!-- End of Modal content -->
+            </div><!-- End of Modal dialog -->
         </div>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="form_email">Email *</label>
-                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
-                    <div class="help-block with-errors"></div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="form_phone">Phone</label>
-                    <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
-                    <div class="help-block with-errors"></div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="form-group">
-                    <label for="form_message">Message *</label>
-                    <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
-                    <div class="help-block with-errors"></div>
-                </div>
-            </div>
-            <div class="col-sm-12">
-                <input type="submit" class="btn btn-primary btn-send" value="Send message">
-            </div>
-        </div>
-        <p class="text-muted"><strong>*</strong> These fields are required.</p>
     </div>
+ </div>
 
-</form>
-</div>
 
-<!-- contact me section ends here
+
+
+<!-- end of modal
  -->
 
-<br>
-<hr>
 
-<!-- Social Media Section Starts here -->
+<footer>
+<h2>All content is the intelectual property of Jennifer Grenz. Use of any of the mateials shown in this site require the prior authorization of Jennifer Grenz.<h2>
+</footer>
 
-<div id="social">
-	<h1>Social Media</h1>
-	<p>You can find me on all the major social media platforms, but I prefer to interact via Twitter! Gotta get to the point with only 140 characters! My feed is to the right, but feel free to reach out using any of the icons below</p>
-
-	<div class="twitterbox"> <h2>Twitter Box</h2> </div>
-	<div class="socialicons">
-		<ul>
-			<li>Twitter</li>
-			<li>Facebook</li>
-			<li>Instagram</li>
-			<li>Pinterest</li>
-		</ul>
-	</div>
-
-
-</div>
-
-
-
-
-<!-- Social media section ends here-->
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="js/app.js"></script>
