--- a/index.html
+++ b/index.html
@@ -222,8 +222,11 @@
 
  </div>
 
-<a class="twitter-timeline" href="https://twitter.com/wunce">Tweets by wunce</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<div class="twitter">
 
+<a class="twitter-timeline" data-width="500" data-height="600" href="https://twitter.com/Jennifergrenz">Tweets by Jennifergrenz</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+</div>
 
 
 <!-- end of modal
